--- a/DataEngine/src/main/resources/config.properties
+++ b/DataEngine/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # \u5305\u540D
-package.name=edu.wong
+package.name=com.viaas
 
 ## mysql8 spring-cloud-study
 #jdbc.driverClass=com.mysql.cj.jdbc.Driver
@@ -24,6 +24,6 @@ package.name=edu.wong
 
 # mysql8 seata_account
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/seata_account?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
+jdbc.url=jdbc:mysql://localhost:3306/docker_cloud?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
 jdbc.user=root
 jdbc.password=123456
