feat:add DockerManager in spring cloud

--- a/DataEngine/pom.xml
+++ b/DataEngine/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>DataEngine</artifactId>
+    <artifactId>DataGenerate</artifactId>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
