--- a/IdWorker/pom.xml
+++ b/IdWorker/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.hy.certification</groupId>
+    <groupId>com.viaas.certification</groupId>
     <artifactId>IdWorker</artifactId>
 
     <properties>
