add CertificationAuthorityApi that to handler authorization verification

--- a/CertificationAuthority/pom.xml
+++ b/CertificationAuthority/pom.xml
@@ -45,19 +45,16 @@
 <!--            <version>4.0.1</version>-->
 <!--        </dependency>-->
 
-        <!-- JWT Library -->
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-api</artifactId>
-            <version>0.11.5</version>
-        </dependency>
-
-        <!-- JWT Implementation Dependencies -->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-impl</artifactId>
-            <version>0.11.5</version>
-            <scope>runtime</scope>
+            <groupId>com.viaas.certification.api</groupId>
+            <artifactId>CertificationAuthorityApi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-security</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
