--- a/DockerManager/pom.xml
+++ b/DockerManager/pom.xml
@@ -50,6 +50,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.pf4j</groupId>
+            <artifactId>pf4j-spring</artifactId>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
