--- a/CertificationAuthority/src/main/resources/application.yml
+++ b/CertificationAuthority/src/main/resources/application.yml
@@ -13,30 +13,31 @@ spring:
     user:
       name: user1
       password: password
-    oauth2:
-      authorizationserver:
-        client:
-          messaging-client:
-            registration:
-              client-id: "messaging-client"
-              client-secret: "secret"
-              client-authentication-methods:
-                - "client_secret_basic"
-              authorization-grant-types:
-                - "authorization_code"
-                - "refresh_token"
-                - "client_credentials"
-              redirect-uris:
-                - "http://127.0.0.1:8080/login/oauth2/code/messaging-client-oidc"
-                - "http://127.0.0.1:8080/authorized"
-              post-logout-redirect-uris:
-                - "http://127.0.0.1:8080/logged-out"
-              scopes:
-                - "openid"
-                - "profile"
-                - "message.read"
-                - "message.write"
-            require-authorization-consent: true
+#    oauth2:
+#      authorizationserver:
+#        client:
+#          messaging-client:
+#            registration:
+#              client-id: "messaging-client"
+#              client-secret: "{noop}secret"
+#              client-authentication-methods:
+#                - client_secret_basic
+#                - client_secret_post
+#                - none
+#              authorization-grant-types:
+#                - authorization_code
+#                - refresh_token
+#                - client_credentials
+#              redirect-uris:
+#                - "http://127.0.0.1:8080/login/oauth2/code/messaging-client-oidc"
+#                - "http://127.0.0.1:8080/authorized"
+#              post-logout-redirect-uris:
+#                - "http://127.0.0.1:8080/logged-out"
+#              scopes:
+#                - openid
+#                - profile
+#            require-proof-key: true
+#            require-authorization-consent: true
 snow:
   woker:
     id: 1
