--- a/CertificationAuthorityApi/pom.xml
+++ b/CertificationAuthorityApi/pom.xml
@@ -19,10 +19,22 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.28</version> <!-- 确保使用最新的稳定版本 -->
+        </dependency>
         <!-- JWT Library -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.viaas.commons</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- JWT Implementation Dependencies -->
